Aligned first images. fixed skills list and header

--- a/css/style.css
+++ b/css/style.css
@@ -102,20 +102,27 @@ h1 {
     height: 400px;
     justify-content: space-around;
     border-radius: 25px;
-    margin-left: -400px;
+    margin-left: -450px;
+}
+
+#header-and-list {
+    display: flex;
+    flex-direction: column;
 }
 
 #skills-header {
     width: 200px;
     display: flex;
     justify-content: center;
-    border-radius: 25px;
+    margin-top: 5px;
 }
 
 #skills-list {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    width: 300px;
+    margin-top: 0px;
 }
 
 #art-portfolio {
@@ -123,4 +130,33 @@ h1 {
     flex-direction: row;
     margin-left: 200px;
     
+}
+
+#portfolio-images-1 {
+    display: flex;
+    flex-direction: row;
+    margin-left: -200px;
+    justify-content: space-between;
+    width: 720px;
+}
+
+#portfolio-images-2 {
+    display: flex;
+    flex-direction: row;
+    margin-left: -200px;
+    justify-content: space-between;
+    width: 720px;
+    margin-top: 20px;
+}
+
+.skills {
+    margin-top: 15px;
+    margin-left: 30px;
+    padding: 3px;
+    width: 200px;
+}
+
+#skills-header-text {
+    margin-top: 40px;
+    margin-left: 100px;
 }
